[tool.poetry]
name = "PltStyler"
version = "0.0.8"
description = "A collection of stylesheets and default values for Python matplotlib figures."
authors = ["Bela Vogler <bela.vogler@uni-jena.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
